Worked on Register function

--- a/.common/client/identity.cfg
+++ b/.common/client/identity.cfg
@@ -3,6 +3,7 @@
     {
       "private" : "abcde",
       "public": "defgh",
+      "alias" : "Alice",
       "contacts": [
         {
           "public": "stuvw",
@@ -17,6 +18,7 @@
     {
       "private" : "ijklm",
       "public": "nopqr",
+      "alias" :  "Bob",
       "contacts" : []
     }
   ]
