--- a/.common/client/package.json
+++ b/.common/client/package.json
@@ -7,6 +7,7 @@
     "keypair": "^1.0.1",
     "scrypt": "^6.0.3",
     "querystring": "^0.2.0",
-    "request" : "^2.81.0"    
+    "request-promise": "^4.2.0",
+    "async": "^2.4.0"
   }
 }
